# KGmetaSP

./: 3rd-party-licenses.txt  README.md  poetry.toml  pyproject.toml
MKGA-exekgs-extension/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MKGA-exekgs-extension/config/: multiple.yaml  single.yaml
MKGA-exekgs-extension/config/aug_approach/: approach.yaml
MKGA-exekgs-extension/config/aug_method/: methods.yaml
MKGA-exekgs-extension/config/dataload/: dataload.yaml
MKGA-exekgs-extension/config/embed/: embed.yaml
MKGA-exekgs-extension/notebooks/: model_evaluation.ipynb
MKGA-exekgs-extension/src/: autoevaluate.py  main.py
kge_experiments/: config.py
kge_experiments/classes/: dataset_similarity_calculator.py  exekg_converter.py  exekg_dataset.py  exekg_pykeen_dataset.py  link_prediction_trainer.py  pipeline_performance_predictor.py  rdf2vec.py
kge_experiments/cli/: __init__.py  main.py
kge_experiments/constants/: filter_by_datasets.py  invalid_flows_per_task.py  queries.py
kge_experiments/scripts/: dataset_stats.py  mlseakg_ablation_study.py  plot_dataset_similarity_results.py  plot_pipeline_performance_prediction_results.py  utils.py
kge_experiments/utils/: embedding_utils.py  ged_utils.py  graph_utils.py  kgbench_utils.py  model_utils.py  openml_utils.py  similarity_utils.py  string_utils.py
openml_exekgs_generation/: config.py  main.py
openml_exekgs_generation/classes/: openml_crawler.py
openml_exekgs_generation/utils/: __init__.py  exec_utils.py  exekg_creation_utils.py  openml_utils.py  query_utils.py  string_utils.py
(+21 files in other folders)
